<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="developed">A Team Group Squad Development</string>
    <string name="action_settings">Settings</string>
    <string name="init_total">Total: $0.00</string>
    <string name="init_count">0</string>
    <string name="launch_camera">Launch Camera</string>
    <string name="quarter">Quarters: </string>
    <string name="nickle">Nickels: </string>
    <string name="dime">Dimes: </string>
    <string name="penny">Pennies: </string>
    <string name="capture">Capture</string>
    <string name="select_same">Select: Coins all the same</string>
    <string name="select_largest">Select: Largest Diameter (Experimental)</string>
    <string name="btn_quarter">Quarter</string>
    <string name="btn_nickle">Nickel</string>
    <string name="btn_dime">Dime</string>
    <string name="btn_penny">Penny</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <color name="garnet">#540115</color>
    <color name="gold">#CDC092</color>
    <color name="black">#000000</color>
    <string name="app_name">Coin Counter!</string>
    <string name="btn_back">Back</string>
    

</resources>
