<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/garnet"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.android.groupproject.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/init_total"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gold" />

        <TableLayout
            android:id="@+id/coin_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/quarter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quarter"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/quarter_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/dime_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dime"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/dime_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/nickle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/nickle_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/penny_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penny"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/penny_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gold" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/button_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/launch_camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_camera"
                android:textColor="@color/gold" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/gold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/developed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:text="@string/developed"
        android:textColor="@color/gold" />

</RelativeLayout>